--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,10 @@ concurrency:
 
 jobs:
   build:
+    env:
+      # Explicit base path for GitHub Pages so exported assets resolve under /Portfolio
+      NEXT_PUBLIC_BASEPATH: /Portfolio
+      NEXT_PUBLIC_SITE_URL: https://nishthalath.github.io/Portfolio
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -33,9 +37,6 @@ jobs:
 
       - name: Build with Next.js
         run: npm run build
-        env:
-          NEXT_PUBLIC_SITE_URL: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}
-          NEXT_PUBLIC_BASEPATH: /${{ github.event.repository.name }}
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
