fix: add export step for static site in GitHub Actions workflows

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -27,6 +27,9 @@ concurrency:
 jobs:
   # Build job
   build:
+    env:
+      NEXT_PUBLIC_BASEPATH: /Portfolio
+      NEXT_PUBLIC_SITE_URL: https://nishthalath.github.io/Portfolio
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -75,6 +78,8 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
+      - name: Export static site
+        run: ${{ steps.detect-package-manager.outputs.runner }} next export
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
